--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ a {
     list-style: none;
 }
 
+.title {
+    font-family: 'Curcum', Arial, sans-serif;
+}
+
 /* Button */
 .btn {
     font: inherit;
@@ -267,7 +271,6 @@ a {
     line-height: 30px;
     text-transform: uppercase;
     font-weight: 400;
-    font-family: 'Curcum', Arial, sans-serif;
 }
 
 .index-columns p {
@@ -306,7 +309,6 @@ a {
     line-height: 18px;
     text-transform: uppercase;
     background-color: #f7f3ec;
-    font-family: 'Curcum', Arial, sans-serif;
 }
 
 .filter fieldset {
@@ -468,8 +470,6 @@ a {
     line-height: 30px;
     text-transform: uppercase;
     font-weight: 400;
-    font-family: 'Curcum', Arial, sans-serif;
-
 }
 
 .modal-write-us input[type="text"],
