--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,21 @@ a {
   padding: 0 10px;
 }
 
+.new::after {
+  content: '';
+  position: absolute;
+  display: block;
+  z-index: 2;
+  width: 60px;
+  height: 60px;
+  background-image: url('../img/new-flag.png');
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  top:0;
+  right: 0;
+
+}
+
 /* Button */
 .btn {
   font: inherit;
@@ -85,8 +100,11 @@ a {
 .btn-buy {
   color: #ffffff;
   background-color: #63a63e;
-  border-radius: 2px;
+  border-radius: 3px;
   box-shadow: inset 0 -3px 0 #367315;
+  text-transform: uppercase;
+  padding: 12px 0;
+  margin-bottom: 8px;
 }
 
 .btn-buy:hover,
@@ -103,6 +121,8 @@ a {
   background-color: #ffffff;
   border: 3px solid #63a63e;
   border-radius: 2px;
+  text-transform: uppercase;
+  padding: 9px 0;
 }
 
 .btn-bookmark:hover,
@@ -430,6 +450,7 @@ a {
   margin-bottom: 20px;
   background-color: bisque;
   float:left;
+  position: relative;
 }
 
 .product-material {
@@ -477,12 +498,77 @@ a {
 
 .product-slider{
   width: 620px;
-  min-height: 266px;
   float:left;
+  position: relative;
+}
+
+.product-slider h3{
+  margin: 0;
+  font-size: 36px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 25px;
+  padding-left: 25px;
+}
+
+.product-slider p {
+  margin: 0;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  padding-left: 25px;
+  margin-bottom: 120px;
+}
+
+.product-slider .btn {
+  display: block;
+  margin: 0;
+  padding: 15px 0;
+  width: 195px;
+  margin-left: 25px;
+}
+
+.slider-item-1{
+  min-height: 266px;
   background-image: url('../img/servSlidImg_1.jpg');
   background-repeat: no-repeat;
   background-position: 0 0;
 }
+
+.slider-item-2 {
+  min-height: 266px;
+  background-image: url('../img/servSlidImg_2.jpg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.slider-btn {
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+
+.slider-btn::after{
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 3px solid #ffffff;
+  border-left: 3px solid #ffffff;
+}
+
+.slider-btn-prev {
+  left: 25px;
+  transform: rotate(-45deg);
+}
+
+.slider-btn-next {
+  right: 25px;
+  transform: rotate(135deg);
+}
+
 
 .product-item h3 {
   margin-left: 23px;
@@ -499,6 +585,28 @@ a {
   width: 135px;
   padding: 6px 0;
   margin-left: 23px;
+}
+
+.product-slider-label {
+  position: absolute;
+  left: 50%;
+  bottom: 50px;
+}
+
+.slider-item-1,
+.slider-item-2 {
+  display: none;
+}
+
+#slid-1:checked ~ .slider-item-1,
+#slid-2:checked ~ .slider-item-2 {
+  display: block;
+}
+
+#slid-1:checked ~ .product-slider-label label[for="slid-1"],
+#slid-2:checked ~ .product-slider-label label[for="slid-2"]{
+  color: #32425c;
+  background-color: #ffffff;
 }
 
 .popular-goods {
@@ -594,9 +702,12 @@ a {
   box-shadow: 0px 10px 25px 0px rgba(41,52,73,0.5);
 }
 
-.brand-item:active{/*тень бледнеет*/
-  opacity: .3;
+.brand-item:active{
   box-shadow: 0px 4px 10px 0px rgba(41,52,73,0.5);
+}
+
+.brand-item:active > img {
+  opacity: .3;
 }
 
 .brand-item img {
@@ -643,6 +754,7 @@ a {
 
 .service-menu-item{
   display: block;
+  font-family: 'Cuprum', Arial, sans-serif;
   font-size: 21px;
   line-height: 30px;
   font-weight: 700;
@@ -900,24 +1012,49 @@ a {
 }
 
 .card-item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   width:218px;
   margin-bottom: 20px;
   border: 1px solid #e5e5e5;
   /* Временно для сетки */
   min-height: 310px;
+  position: relative;
 }
 
 
-.card-item:hover {
+.card-item:hover,
+.card-item:focus {
   border-color:transparent;
   box-shadow: 0px 10px 25px 0px rgba(41,52,73,0.5);
 }
 
+.card-item:hover > .card-item-image {
+  opacity: 0;
+}
+
+
+
 .card-item-title {
+  width: 160px;
   font-size: 18px;
   line-height: 20px;
   text-align: center;
   color: #000000;
+}
+
+.card-item-image {
+  order: -1;
+  z-index: 1;
+}
+
+.card-item-action {
+  position: absolute;
+  top: 43px;
+  display: flex;
+  flex-direction: column;
+  width: 135px;
 }
 
 .card-item del,
