--- a/css/style.css
+++ b/css/style.css
@@ -1330,12 +1330,66 @@ img {
 }
 
 .filter-option label{
+  position: relative;
   display: block;
   font-size: 15px;
   line-height: 20px;
   text-transform: uppercase;
   padding: 15px 0;
-  padding-left: 35px;
+  padding-left: 40px;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  left: 0;
+  position: absolute;
+
+  width: 23px;
+  height: 23px;
+
+  background-image: url('../img/icon/checkbox-off.svg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  left: 0;
+  position: absolute;
+
+  width: 27px;
+  height: 23px;
+
+  background-image: url('../img/icon/checkbox-on.svg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-radio + label::after {
+  content: "";
+  box-sizing: border-box;
+  left: 0;
+  position: absolute;
+
+  width: 25px;
+  height: 25px;
+
+  border: 5px solid #c5c5c5;
+  border-radius: 50%;
+}
+
+.filter-input-radio:checked + label::before {
+  content: "";
+  box-sizing: border-box;
+  left: 8px;
+  top: 23px;
+  position: absolute;
+
+  width: 9px;
+  height: 9px;
+  background-color: #c5c5c5;
+
+  border-radius: 50%;
 }
 
 .filter-input:disabled + label {
